# multidex

./: .dockerignore  .gitignore  Dockerfile  README.md  env_list  environment.yml  installation_guide.md  pyproject.toml  readme.md  windows_environment.yml
.github/workflows/: environment.yml  mac_build.yaml  ubuntu_build.yaml  windows_build.yaml
docs/: Mastcam_Spectral_Diversity_METHODS_draft2(1).docx  Mastcam_Spectral_Diversity_METHODS_draft2(1).epub
mastspec/: Untitled.ipynb  Untitled1.ipynb  app.ipynb  app.py  app_space.ipynb  bookmarks.md  db.sqlite3  freqer.ipynb  ingest_csv.ipynb  manage.py  manually_renamed_images.csv  minimal for dash.ipynb  notes.ipynb  plotter_utils.py  save.txt  scratch_calc.ipynb  scratchspace.ipynb  skel.py  thumbnailer.py  utils.py
mastspec/assets/: main.css
mastspec/mastspec/: asgi.py  settings.py  urls.py  wsgi.py
mastspec/plotter/: apps.py  bad_functions.py  components.py  graph.py  models.py  null.py  spectrum_ops.py
mastspec/saves/: saved_searches.csv
multidex/: ZCAM_db_dump.csv  __init__.py  _pathref.py  app.py  contains_search.ipynb  db.sqlite3  feature_correlation_matrix_2021_04_07.csv  ingest_ccam.py  ingest_csv.ipynb  ingest_csv.py  ingest_mcam.py  ingest_multidex.py  ingest_scam.py  ingest_visor.py  ingest_zcam.py  ingest_zcam_csv.ipynb  manage.py  mcam_ingest_csv.ipynb  multidex.py  multidex_utils.py  multidex_z.py  plotter_utils.py  scratch_calc.ipynb  scratch_clustering.ipynb  setup.py  thumbnailer.py  update_mcam_db.py  update_zcam_db.py
multidex/assets/: assets_note.txt  main.css
multidex/data/: TEST.sqlite3  (+3 more)
(+108 files in other folders)
